--- a/app/views/layouts/_global_search.html.erb
+++ b/app/views/layouts/_global_search.html.erb
@@ -2,23 +2,17 @@
   <div class="vert-align">
     <div class="vert-align__inner">
       <div class="container" ng-controller="GlobalSearchCtrl" ng-cloak>
+
         <%# Search form %>
         <%= form_tag centre_products_path(centre_id: params[:centre_id] || params[:id]), class: "search-mini", role: "search", method: :get do %>
           <span class="icon icon--search" aria-hidden="true"></span>
           <label for="global-search" class="hide-visually">Search site</label>
           <input type="hidden" ng-model="centre" value="<%= params[:centre_id] || params[:id] %>">
           <input ng-model="searchQuery" ng-blur="hideSuggestions()" ng-focus="makeSuggestions()" ng-keyup="makeSuggestions($event)" ng-keydown="navigateSuggestions($event)" type="search" class="search-mini__input" id="global-search" name="search_query" autocomplete="off" placeholder="Search products&#8230;">
-          <input type="submit" value="Search" ng-hide="true">
+          <input type="submit" value="Search" ng-hide="true" class="search-mini__submit">
           <em ng-if="suggestions" ng-pluralize count="suggestions.length" when="searchResultText()" role="status" aria-live="polite" class="hide-visually"></em>
         <% end %>
         <%# //Search form %>
-
-        <%# Close search %>
-        <button class="btn header__overlay__close-btn hide-fully--non-palm js-disabled-hide js-site-search-close" type="button" aria-owns="site-search">
-          <span class="hide-visually">Close search</span>
-          <span class="icon icon--close-lrg" aria-hidden="true"></span>
-        </button>
-        <%# //Close search %>
 
         <%# Search results %>
         <div class="search-results" ng-show="suggestionsVisible">
@@ -32,6 +26,14 @@
           </div>
         </div>
         <%# //Search results %>
+
+        <%# Close search %>
+        <button class="btn header__overlay__close-btn hide-fully--non-palm js-disabled-hide js-site-search-close" type="button" aria-owns="site-search">
+          <span class="hide-visually">Close search</span>
+          <span class="icon icon--close-lrg" aria-hidden="true"></span>
+        </button>
+        <%# //Close search %>
+
       </div>
     </div>
   </div>
