UI Polish - WSF-5374

--- a/app/views/shared/tiles/_event.html.erb
+++ b/app/views/shared/tiles/_event.html.erb
@@ -1,6 +1,6 @@
 <div class="tile__image">
   <%= fetch_image_tag result.image,
-    alt: result.name,
+    alt: "Photo of event: #{result.name}",
     width: 288,
     crop: :limit
   %>
