--- a/app/views/shared/tiles/_product.html.erb
+++ b/app/views/shared/tiles/_product.html.erb
@@ -1,6 +1,6 @@
 <div class="tile__image">
   <%= fetch_image_tag result.primary_image,
-    alt: "Photo of #{result.title}",
+    alt: "Photo of product: #{result.title}",
     width: 288,
     crop: :limit
   %>
