--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -11,7 +11,7 @@
 
     <div class="detail-view__media detail-view__mrg-base">
       <%= fetch_image_tag @event.image,
-        alt: @event.name,
+        alt: "Photo of event: #{@event.name}",
         width: 638,
         crop: :limit
       %>
