--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -93,7 +93,7 @@
                 <div class="stores-list__logo hide-fully--palm js-disabled-hide">
                   <div class="vert-align">
                     <div class="vert-align__inner">
-                      <span class="preloader preloader--light" data-image-src="<%= cl_image_path(store.logo, type: "fetch", width: 168, height: 62, quality: 25, crop: :pad, background: 'rgb:FFFFFF') %>" data-image-alt="<%= "#{store.name} logo" %>" data-image-itemprop="photo">
+                      <span class="preloader preloader--light" data-image-src="<%= cl_image_path(store.logo, type: "fetch", width: 168, height: 62, crop: :pad, background: 'rgb:FFFFFF') %>" data-image-alt="<%= "#{store.name} logo" %>" data-image-itemprop="photo">
                         <span class="preloader__spinner"></span>
                         <em class="hide-visually">Loading, please wait&#8230;</em>
                       </span>
