--- a/app/views/layouts/_section_nav.html.erb
+++ b/app/views/layouts/_section_nav.html.erb
@@ -25,7 +25,7 @@
       </div>
     </div> -->
 
-    <!-- Centre selector -->
+    <%# Centre selector %>
     <div class="centre-selector js-disabled-hide">
       <div class="centre-selector-control toggle-visibility" id="centre_selector">
         <label for="centre_select">Show products at</label>
