--- a/app/views/shared/_stylesheets_global.html.erb
+++ b/app/views/shared/_stylesheets_global.html.erb
@@ -1,11 +1,11 @@
-	<!-- Fonts -->
+	<%# Fonts %>
 	<link href="http://fonts.googleapis.com/css?family=Lato:300|Open+Sans" rel="stylesheet">
-	<!-- //Fonts -->
+	<%# //Fonts %>
 
-	<!-- Modern browser CSS -->
+	<%# Modern browser CSS %>
 	<!--[if gt IE 8]><!--><link rel="stylesheet" href="<%= stylesheet_path('application') %>"><!--<![endif]-->
-	<!-- //Modern browser CSS -->
+	<%# //Modern browser CSS %>
 
-	<!-- Old IE CSS (IE < 9) -->
+	<%# Old IE CSS (IE < 9) %>
 	<!--[if (lt IE 9) & (!IEMobile)]><link rel="stylesheet" href="<%= stylesheet_path('old-ie') %>"><![endif]-->
-	<!-- //Old IE CSS (IE < 9) -->
+	<%# //Old IE CSS (IE < 9) %>
